/*
 * $Id: ChangeLog,v 1.1450 2003/09/11 17:27:06 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-09-11 21:57 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/make_rpm.sh
    + PLD distro added
    - removed Luiz hack for bug in Conectiva Linux RPM - it breaks
      compilation from non root account.
    + added other hack :-) for buggy RPM which should resolve this
      problem. Please test.

  * xharbour/make_tgz.sh
    + PLD distro added
  * xharbour/xharbour.spec
    + PLD distro added

  * xharbour/xhbgtmk.sh
    * slang_devel removed from necessary dependences, GTSLN won't
      compile on new RH with its slang-devel so we shouldn't make
      people to install it. It doesn't disable GTSLN compilation
      if proper sland-devel exists in a system

  * xharbour/source/vm/proc.c
    * strcat replaced by strncpy to eliminate GPF in my system
      when called from hb_arrayResetHolder()

2003-09-11 10:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrays.c
    + Added explicit HB_IS_MEMVAR() support to hb_arrayReleaseGarbage() utilizing hb_memvarValueDecGarbageRef()

  * source/vm/memvars.c
    + Added explict HB_IS_ARRAY() support to hb_memvarValueDecGarbageRef() utilizing hb_arrayReleaseHolderGarbage().

2003-11-09 12:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  *  xharbour.spec
    * Added Conectiva to platform detection
  * make_rpm.sh
    * Fixed when conectiva is used

2003-11-03 10:15 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
  * source/vm/hbi18n.c
    + Added optional parameter to HB_HFIND to retrieve the hash table index
      by reference: HB_HFIND( <aHash>, <cKey>, [<@nIndex>] )

2003-09-11 15:12 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
   * utils/Makefile
   * utils/hbdict/Makefile
      ! Using standard utils makefile for linux.
