@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1450 2003/09/11 17:27:06 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.1451 2003/09/11 18:08:35 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-09-11 18:15 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
+  * source/clipsamp/gauge.c
+    * szPct buffer needs to be 5 characters, not 4
 
 2003-09-11 21:57 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
   * xharbour/make_rpm.sh
